--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+html,
+body {
+  height: calc(100vh - 56px);
+}
+
+#root {
+  height: 100%;
+}
+
 .App {
   text-align: center;
+  height: 100%;
 }
 
 .App-logo {
@@ -32,6 +42,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
